# ognrange

./: .dockerignore  .gitignore  .prettierrc  LICENSE  README.md  ava.config.js  docker-compose.yml  jest.config.js  next-i18next.config.js  next.config.cjs  next.config.js  package.json  public  tsconfig-bin.json  tsconfig.json  vitest.config.ts
aprs-server/: Cargo.toml
aprs-server/rusty-leveldb-patch/: .cargo_vcs_info.json  Cargo.toml
aprs-server/src/: accumulators.rs  bitvec.rs  config.rs  db.rs  elevation.rs  global_uptime.rs  h3cache.rs  ignore_station.rs  json_io.rs  layers.rs  main.rs  packet_stats.rs  protocol_stats.rs  reject_log.rs  rollup.rs  station.rs  station_stats.rs  stationfile.rs  stats_accumulator.rs  storage.rs  symlinks.rs  syslog.rs  types.rs
aprs-server/src/aprs/: connection.rs  mod.rs  parser.rs
aprs-server/src/coverage/: activity.rs  header.rs  mod.rs  record.rs
conf/: Dockerfile  docker-httpd.conf  nope.html
conf/rc.d/: ognrange_aprs  ognrange_next
docs/: DATA_COLLECTION.md  STATION.md  STATIONS.md  STATISTICS.md
lib/: deckgl.js  getelevationoffset.js  ignored_stations.js  ignorestation.js  range-protobuf.js  range-protobuf.mjs  range.proto
lib/api/: searcharrow.js  searcharrow.ts  types.ts
lib/common/: config.js  config.ts  datebounds.ts  ignorestation.ts  layers.ts  prefixwithzeros.js  prefixwithzeros.ts  protocolstats.ts  stationstats.ts  statsio.ts
pages/: _app.js  _app.tsx  index.js  index.ts  index.tsx
public/: arrow
styles/: Home.module.css  styles.css
test/: coveragerecord.test.ts  h3cache.test.ts  rollup.test.ts
(+74 files in other folders)
