[package]
name = "aprs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
h3o = "0.7"
rusty-leveldb = "4"
arrow = { version = "54", features = ["prettyprint"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
png = "0.17"
lru = "0.12"
regex = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
socket2 = "0.6"


[dev-dependencies]
tempfile = "3"

[patch.crates-io]
rusty-leveldb = { git = "https://github.com/ifly7charlie/leveldb-rs.git" }

[profile.release]
opt-level = 3
lto = true
